# vast_robot

./: README.md
vast_driver_control/: CMakeLists.txt  package.xml
vast_driver_control/src/: driver_control.cpp
vast_fake/: CMakeLists.txt  package.xml
vast_fake/launch/: vast_fake.launch
vast_fake/rviz/: config.rviz
vast_fake/src/: odom_path_node.cpp  vast_fake_node.cpp
vast_gazebo/: CMakeLists.txt  package.xml
vast_gazebo/config/: rviz_config.rviz
vast_gazebo/launch/: robot.launch
vast_gazebo/urdf/: vast01_omni_practical.xacro  vast1.gazebo
vast_gmapping/: CMakeLists.txt  package.xml
vast_gmapping/launch/: slam_gmapping.launch
vast_navigation/: CMakeLists.txt  package.xml
vast_navigation/data/: mpc.mat  mpc2.mat  ref.mat  ref1.mat  robot.mat  teb.mat
vast_navigation/launch/: move_base.launch  vast_navigation.launch
vast_navigation/maps/: mymap.pgm
vast_navigation/param/: base_local_planner_params.yaml  dwa_local_planner_params_vast.yaml  move_base_params.yaml  teb_local_planner_params.yaml
vast_navigation/scripts/: plot_data.py  test_nav.py
vast_teleop/: CMakeLists.txt  package.xml
